# gita-greeter

./: .gitignore  :memory  Cargo.toml  README.md  bhagavad.sqlite  default.nix  flake.nix  makefile  shell.nix
src/: lib.rs  main.rs
src/db/: connection.rs
src/verses/: destroy.rs  mod.rs  pick.rs  populate.rs
